# InertialDriver

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/: InertialDriver.h  MyVector.h  MyVector.hpp
src/: InertialDriver.cpp  main.cpp
